<resources>
    <string name="app_name">Java PPLE Settings Sample</string>

    <!-- Login -->
    <string name="login_welcome">Welcome to Java PPLE Settings Sample!</string>
    <string name="login_email_field">Email Address</string>
    <string name="login_password_field">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="logout_btn_text">Logout</string>

    <!-- Store Selection -->
    <string name="store_selection">Select your Store</string>
    <string name="store_selection_hint">Store</string>

    <!-- Price Check -->
    <string name="logout">Log out</string>

    <!-- Settings -->
    <string name="overview_settings">Settings</string>
    <string name="feedback_settings">Feedback</string>
    <string name="view_settings">View</string>
    <string name="flow_settings">Price Check Flow</string>
    <string name="overlay_settings">Overlay</string>
    <string name="viewfinder_settings">Viewfinder</string>
    <string name="scan_area_settings">Scan Area</string>
    <string name="scan_area_width_settings">Scan Area Width</string>
    <string name="scan_area_height_settings">Scan Area Height</string>

    <!-- FLow -->
    <string name="price_check_flow">Price Check Flow</string>
    <string name="continuous_flow">Continuous Price Check</string>
    <string name="tap_to_resume">Tap anywhere to resume</string>

    <!-- Feedback -->
    <string name="feedback_correct_price">Correct Price Feedback</string>
    <string name="feedback_wrong_price">Wrong Price Feedback</string>
    <string name="feedback_unknown_product">Unknown Product Feedback</string>
    <string name="feedback_sound">Sound</string>
    <string name="feedback_vibration">Vibration</string>

    <!-- Overlay -->
    <string name="overlay_basic">Basic Overlay</string>
    <string name="overlay_advanced">Advanced Overlay</string>
    <string name="overlay_custom">Custom Overlay</string>
    <string name="correct_price_brush">Correct price brush</string>
    <string name="wrong_price_brush">Wrong price brush</string>
    <string name="unknown_product_brush">Unknown product brush</string>
    <string name="enable">Enable</string>

    <!-- Scan Area -->
    <string name="location_selection">Location Selection</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="show_scan_area_guides">Show Scan Area Guides</string>
    <string name="value">Value</string>
    <string name="number_not_valid">This is not a valid number</string>
    <string name="size_no_unit">%1$.2f</string>
    <string name="size_with_unit">%1$.2f (%2$s)</string>

    <!-- Viewfinder -->
    <string name="type">Type</string>
    <string name="none">None</string>
    <string name="laserline">Laserline</string>
    <string name="aimer">Aimer</string>
    <string name="style">Style</string>
    <string name="line_style">Line Style</string>
    <string name="_default">Default</string>
    <string name="rectangular">Rectangular</string>
    <string name="transparent">Transparent</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="color">Color</string>
    <string name="dimming">Dimming</string>
    <string name="animation">Animation</string>
    <string name="looping">Looping</string>
    <string name="size_specification">Size Specification</string>
    <string name="shorter_dimension">Shorter Dimension (Fraction)</string>
    <string name="height_aspect">Height Aspect</string>
    <string name="width_aspect">Width Aspect</string>
    <string name="longer_dimension_aspect">Longer Dimension Aspect</string>
    <string name="enabled_color">Enabled Color</string>
    <string name="disabled_color">Disabled Color</string>
    <string name="frame_color">Frame Color</string>
    <string name="dot_color">Dot Color</string>
    <string name="width_and_height">Width and Height</string>
    <string name="width_and_height_aspect">Width and Height Aspect</string>
    <string name="height_and_width_aspect">Height and Width Aspect</string>
    <string name="shorter_dimension_and_aspect_ratio">Shorter Dimension And Aspect Ratio</string>

</resources>
