<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.settings.feedback.FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black80Transparent"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark" />

        <androidx.cardview.widget.CardView style="@style/SettingsCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_dimen_mid_big">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/feedback_correct_price" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/correct_sound_feedback"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/feedback_sound" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/correct_vibration_feedback"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/feedback_vibration" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/SettingsCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_dimen_mid_big">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/feedback_wrong_price" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/wrong_sound_feedback"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/feedback_sound" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/wrong_vibration_feedback"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/feedback_vibration" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/SettingsCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_dimen_mid_big">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/feedback_unknown_product" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/unknown_sound_feedback"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/feedback_sound" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/unknown_vibration_feedback"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/feedback_vibration" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>