<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.settings.feedback.FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black80Transparent"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark" />

        <androidx.cardview.widget.CardView style="@style/SettingsCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_dimen_mid_big">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/location_selection" />

                <LinearLayout
                    android:id="@+id/container_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/RegularText"
                        android:layout_width="wrap_content"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/width" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_width"
                        style="@style/CaptionText"
                        android:layout_width="match_parent"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:ellipsize="end"
                        android:gravity="center_vertical|end"
                        android:maxLines="1"
                        tools:text="0.00 (Fraction)" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/RegularText"
                        android:layout_width="wrap_content"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/height" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_height"
                        style="@style/CaptionText"
                        android:layout_width="match_parent"
                        android:layout_height="?android:attr/listPreferredItemHeightSmall"
                        android:ellipsize="end"
                        android:gravity="center_vertical|end"
                        android:maxLines="1"
                        tools:text="0.00 (Fraction)" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/SettingsCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_dimen_mid_big">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/show_scan_area_guides" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/should_show_scan_area_guides"
                    style="@style/RegularText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/enable" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>